examples/tests/semantic/pass/var-redefine.tig
let
	type caca = int
	var a : caca := 0
	var a := 3
in
	a <> 0
end
